--- a/ScrumWeb/ScrumWeb.csproj
+++ b/ScrumWeb/ScrumWeb.csproj
@@ -274,6 +274,7 @@
     <Content Include="Models\ScrumModel.edmx.diagram">
       <DependentUpon>ScrumModel.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
